# extrinsic_calibrator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  license.md
extrinsic_calibrator/: package.xml
extrinsic_calibrator_core/: CMakeLists.txt  README.md  license.md  package.xml
extrinsic_calibrator_core/config/: aruco_parameters.yaml  camera_topics_parameters.yaml
extrinsic_calibrator_core/extrinsic_calibrator_core/src/: aruco_generator_class.py  extrinsic_calibrator_class.py
extrinsic_calibrator_core/scripts/: extrinsic_calibrator_node.py  generator_aruco_node.py
extrinsic_calibrator_examples/: CMakeLists.txt  README.md  package.xml
extrinsic_calibrator_examples/config/: d435.yaml  d435_intrinsics.yaml  l515.yaml  l515_intrinsics.yaml
extrinsic_calibrator_examples/launch/: launch_extrinsic_calibrator.launch.py  launch_rviz.launch.py  launch_usb_cameras.launch.py
